--- a/src/app/components/p1/short/short.component.html
+++ b/src/app/components/p1/short/short.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="text">
-        <h1>Overview</h1>
+        <h1><span class="grey">&#60;</span> Notes <span class="grey">/></span> </h1>
         <p>
             Created using: <span class="orange">HTML/CSS</span>, <span class="orange">Angular</span>,
              <span class="orange">TypeScript</span>, <span class="orange">Firebase</span>
