--- a/src/app/components/p2/long2/long2.component.html
+++ b/src/app/components/p2/long2/long2.component.html
@@ -1,4 +1,4 @@
-<h1>Overview</h1>
+<h1> <span class="grey">&#60;</span> Notes <span class="grey">/></span> </h1>
 <p>
     Created using: <span class="orange">HTML/CSS</span>, <span class="orange">Angular</span>,
         <span class="orange">TypeScript</span>, <span class="orange">Firebase</span>, <span class="orange">Python</span>,
@@ -18,10 +18,10 @@
     community or have staled their growth.
 </p>
 
-<h1>Project Structure</h1>
+<h1> <span class="grey">></span> Project Structure</h1>
     <img src="assets/r2e_project_structure.png" alt="">
 
-<h1>Challenges</h1>
+<h1> <span class="grey">></span> Challenges</h1>
 <p>
     Since this was my first project, even the basic things like setting up Angular and Firebase demanded time.
     Once done, the main challenges I faced was thinking of a way to organize the collected data.
@@ -57,7 +57,7 @@
     <br>
     <img src="assets/add_db.png" alt="">
 
-<h1>Conclusion</h1>
+<h1> <span class="grey">></span> Endnotes</h1>
 <p>
     There are lots of things I want to improve on in this project. The UI is looking very amateurish and the data is set statically.
     Moving forwards, I want to make it so the data updates dynamically, and the landing page to work as a 'discovery' tool.
