--- a/src/app/components/p2/short2/short2.component.html
+++ b/src/app/components/p2/short2/short2.component.html
@@ -1,4 +1,4 @@
-<h1>Overview</h1>
+<h1> <span class="grey">&#60;</span> Notes <span class="grey">/></span> </h1>
 <p>
     Created using: <span class="orange">HTML/CSS</span>, <span class="orange">Angular</span>,
         <span class="orange">TypeScript</span>, <span class="orange">Firebase</span>, <span class="orange">Python</span>,
