--- a/src/app/components/p1/long/long.component.html
+++ b/src/app/components/p1/long/long.component.html
@@ -1,4 +1,4 @@
-<h1>Overview</h1>
+<h1><span class="grey">&#60;</span> Notes <span class="grey">/></span> </h1>
 <p>
     Created using: <span class="orange">HTML/CSS</span>, <span class="orange">Angular</span>,
      <span class="orange">TypeScript</span>, <span class="orange">Firebase</span>
@@ -17,10 +17,10 @@
 </p>
 
 
-<h1>Project Structure</h1>
+<h1><span class="grey">></span> Project Structure</h1>
     <img src="assets/project_flow.png" alt="">
 
-<h1>Challenges</h1>
+<h1><span class="grey">></span> Challenges</h1>
 <p>
     Since I'm using <span class="orange">Firebase</span> to handle the backend, - plus not having to worry about scalability issues -
     most of the implementation challenges are front-end related. In particular, the issues that emmerge when changing the
@@ -85,7 +85,7 @@
     <img src="assets/offset mid top.png" alt="">
     <img src="assets/set guide pos.png" alt="">
 
-<h1>Conclusion</h1>
+<h1><span class="grey">></span> Endnotes</h1>
 <p>
     I really enjoy working on this project. It began as a way for me to practice the async stuff, but I ended up learning a lot about
     many other aspects of web development and went beyond just the front end. Above all, it made me really motivated to keep going, while 
