--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,29 @@
-<p>about works!</p>
+<div class="container">
+    <div id="side1"></div>
+    <div id="side2"></div>
+    <div id="about">
+        <br>
+        <br>
+        <br>
+        <br>
+        <span class="title"> <span class="grey">&#123;</span> About Me <span class="grey">&#125;</span> </span>
+        <br>
+        <br>
+
+        <p>
+            <span class="grey">></span>Hello! My name is Renan, a self-taught front-end developer, seeking to learn more about the back-end
+            to become full-stack.
+        </p>
+        <br>
+        <p>
+            <span class="grey">></span>The scope of my work is a large part of front-end and a sprinkle of back-end, which includes design, coding layouts,
+            single page applications, responsive websites, web apps, CSS/TS animations, SQL (Postgres), and Firebase integration. 
+        </p>
+        <br>
+        <p>
+            <span class="grey">></span>Ideally, I would love to work for a small to medium-sized company, building out features while working closely with
+            the back-end. What drives me is building user-centered apps, and I wouldn't shy away from wearing lots of hats inside
+            a company.
+        </p>
+    </div>
+</div>
