--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,10 @@
   <div id="greetings"><app-greetings></app-greetings></div>
   <div id="project-txt">
     <br>  
-    Projects
+    <span class="grey">&#123;</span> Projects <span class="grey">&#125;</span> 
   </div>
   <div id="p1"><app-p1></app-p1></div>
   <div id="p2"><app-p2></app-p2></div>
-  <div id="about">About</div>
+  <div id="about"><app-about></app-about></div>
   <div id="contact">Contact</div>
 </div>
