Add: contact component + bootstrap

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,5 @@
   <div id="p1"><app-p1></app-p1></div>
   <div id="p2"><app-p2></app-p2></div>
   <div id="about"><app-about></app-about></div>
-  <div id="contact">Contact</div>
+  <div id="contact"><app-contact></app-contact></div>
 </div>
