--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,7 @@
     color: white;
     display:grid;
     grid-template-columns: 1.1fr 5fr 1.1fr;
-    grid-template-rows: 10vh auto 7vh auto auto 45vh 80vh;
+    grid-template-rows: 10vh auto 7vh auto auto auto 80vh;
     grid-template-areas: 
         "side1 nav side2"
         "side1 greetings side2"
@@ -61,7 +61,6 @@ nav {
     grid-area: chat;
 }
 #contact {
-    background: rgb(138, 208, 138);
     grid-area: contact;
 }
 
@@ -73,7 +72,7 @@ nav {
 @media only screen and (max-width: 500px) {
     .main_container {
         grid-template-columns: 1fr;
-        grid-template-rows: 7vh auto 7vh auto auto 60vh 80vh;
+        grid-template-rows: 7vh auto 7vh auto auto auto 80vh;
         grid-template-areas: 
             "nav"
             "greetings"
