--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,9 @@ html {
 }
 //html, body { height: 100%; }
 body { margin: 0; font-family: monospace;}
+
+/* Importing Bootstrap SCSS file. */
+@import "~bootstrap/scss/bootstrap";
+
+/* Importing Datepicker SCSS file. */
+@import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
