Add: contact email service

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -6,7 +6,11 @@
         <br>
         <br>
         <br>
-        <span class="title"> <span class="grey">&#123;</span> About Me <span class="grey">&#125;</span> </span>
+        <span class="title">
+            <span class="line-wrap"> -<span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span></span> 
+            <span class="grey"> &#123;</span> About Me <span class="grey">&#125; </span>
+            <span class="line-wrap"> -<span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span></span>
+        </span>
         <br>
         <br>
 
