Fix: Responsiveness bugs

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -8,12 +8,13 @@
         <br>
         
         <span class="title">
-            <span class="line-wrap"> -<span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span></span>
+            <!-- <span class="line-wrap"> -<span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span></span> -->
             <span class="grey"> &#123;</span> Contact Me <span class="grey">&#125; </span>
-            <span class="line-wrap"> -<span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span></span>
+            <!-- <span class="line-wrap"> -<span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span></span> -->
+            <br>
         </span>
     </div>
-    <div id="contact-form">
+    <div id="contact-form" style="margin-top: 10px;">
         <br>
         <form #f="ngForm" (ngSubmit)="onSubmit(f)" class="formformoso">
             <div class="row">
@@ -34,4 +35,6 @@
         
 
     </div>
+    <br>
+    <br>
 </div>
