--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -2,5 +2,5 @@
     <button mat-button class="contact">Contact/></button>
     <button mat-button><div>About</div></button>
     <button mat-button>Projects</button>
-    <img src="assets/logo.png" alt="">
+    <img src="assets/new_fav.png" alt="">
 </div>
