--- a/src/app/components/greetings/greetings.component.html
+++ b/src/app/components/greetings/greetings.component.html
@@ -3,8 +3,8 @@
     <div class="hello">
         <p class="div-txt orange">&#60;div&#62;</p>
         <p class="tab intro">Hello :) , my 	<span class="orange">$&#123;</span>name<span class="orange">&#125;</span> is <span class="line-wrap"> -<span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span><span class="line">-</span></span></p>
-        <p class="tab name">Renan Vitor Fukushima</p>
-        <p class="tab name2"><span class="">&#60;  Front-end Developer /> </span></p>
+        <p class="tab-big name">Renan Vitor Fukushima</p>
+        <p class="tab-big name2"><span class="">&#60;  Front-end Developer /> </span></p>
         <p class="tab intro">I design and build quality, responsive websites and rich interactive web apps. <br>
         Targeting <span class="assets">Angular</span>, <span class="assets">Typescript</span>, <span class="assets">Firebase</span> and other web development opportunities.</p>
         <br>
