--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,6 +1,6 @@
 <div class="flex">
-    <button mat-button class="contact">Contact/></button>
-    <button mat-button><div>About</div></button>
-    <button mat-button>Projects</button>
+    <button mat-button class="contact" (click)="toContact()">Contact/></button>
+    <button mat-button (click)="toAbout()"><div>About</div></button>
+    <button mat-button (click)="toProjects()">Projects</button>
     <img src="assets/new_fav.png" alt="">
 </div>
