--- a/src/app/components/greetings/greetings.component.html
+++ b/src/app/components/greetings/greetings.component.html
@@ -8,7 +8,7 @@
         <p class="tab intro">I design and build quality, responsive websites and rich interactive web apps. <br>
         Targeting <span class="assets">Angular</span>, <span class="assets">Typescript</span>, <span class="assets">Firebase</span> and other web development opportunities.</p>
         <br>
-        <p class="tab div-txt orange"><button mat-flat-button class="btn">Contact me! /></button></p>
+        <p class="tab div-txt orange"><button mat-flat-button class="btn" (click)="toContact()">Contact me! /></button></p>
         <p class="div-txt orange">&#60;/div&#62;</p>
         <br>
 
