Add: sticky nav

--- a/src/app/components/p1/long/long.component.html
+++ b/src/app/components/p1/long/long.component.html
@@ -58,7 +58,7 @@
 </p>
 <p>
     The solution I found was to set <span class="spec">TransformOrigin</span> to a corner (in this case 'top left'). This puts
-    the scaled canvas at (0,0) of the viewport. Then,  I just had to offset the canvas by half of the clients' width/height 
+    the scaled canvas at (0,0) of the viewport. Then,  I just had to offset the canvas by half of the clients' width/height, 
     plus the value of the scaled coordinates. 
 </p>
 <!-- <p>
